--- a/userSaver/userSaver.csproj
+++ b/userSaver/userSaver.csproj
@@ -52,5 +52,8 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+   <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
+ </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
